--- a/app/views/statistic/high_lower.jade
+++ b/app/views/statistic/high_lower.jade
@@ -10,7 +10,7 @@ block head
 
 
 
-    script(src='/isu/js/statistic/jquery.rowspanizer.js', type='text/javascript')
+    script(src='/plugins/rowspan/jquery.rowspanizer.js', type='text/javascript')
     script(src='/isu/js/statistic/high_lower.js', type='text/javascript')
 
 
