#PSW admin4 통계 조회화면

--- a/app/views/layouts/admin4.jade
+++ b/app/views/layouts/admin4.jade
@@ -113,6 +113,10 @@ html
                                 ul.list-unstyled
                                     li
                                         a(href='/search/mng_list') 전체내용검색
+                                    li
+                                        a(href='/statistic/com_higher') 회사별 상위업무통계
+                                    li
+                                        a(href='/statistic/high_lower') 상위별 하위업무통계
                             li.has_sub
                                 a.waves-effect.waves-primary(href='javascript:void(0);')
                                     i.md.md-view-list
