--- a/app/views/statistic/mng_month.jade
+++ b/app/views/statistic/mng_month.jade
@@ -28,6 +28,8 @@ block head
     script(src='/assets/js/jquery.app.js')
 
     script(src='/vendor/jquery/jquery.min.js')
+    script(src='/plugins/rowspan/jquery.rowspanizer.js', type='text/javascript')
+    script(src='/isu/js/statistic/mng_month.js', type='text/javascript')
 
 block content
     .content-page
@@ -50,38 +52,24 @@ block content
                                 .form-group
                                     label.col-sm-2.control-label 검색년도
                                     .col-sm-2
-                                        select.form-control
-                                            option 2012
-                                            option 2013
-                                            option 2014
-                                            option 2015
-                                            option 2016
-                                            option(selected='') 2017
-                                            option 2018
-                                            option 2019
-                                            option 2020
-                                            option 2021
+                                        select#yyyy.form-control
+                                            option(value='2012') 2012
+                                            option(value='2013') 2013
+                                            option(value='2014') 2014
+                                            option(value='2015') 2015
+                                            option(value='2016') 2016
+                                            option(value='2017') 2017
+                                            option(selected='2018') 2018
+                                            option(value='2019') 2019
+                                            option(value='2020') 2020
+                                            option(value='2021') 2021
                                 .form-group
                                     label.col-sm-2.control-label 담당자
                                     .col-sm-2
-                                        select.form-control
-                                            option 선택하지않음
-                                            option(selected='') 박선우
-                                            option 김상엽
-                                            option 항목1
-                                            option 항목2
-                                            option 항목3
-                                            option 항목4
-                                            option 항목5
+                                        select#manager.form-control
                                     label.col-sm-2.control-label 상위업무
                                     .col-sm-2
-                                        select.form-control
-                                            option 전체
-                                            option 항목1
-                                            option 항목2
-                                            option 항목3
-                                            option 항목4
-                                            option 항목5
+                                        select#higher_cd.form-control
                                     .col-sm-2
                                         button.btn.btn-primary(type='button')
                                             i.fa.fa-search.m-r-5
@@ -89,83 +77,17 @@ block content
                 .row
                     .col-lg-12
                         .card-box
-                            table.table.table-bordered
+                            table#target-table.table.table-bordered
                                 thead
                                     tr
-                                        th.font-12(width='5%') 월
-                                        th.font-12(width='20%') 상위업무
-                                        th.font-12(width='') 하위업무
-                                        th.font-12(width='10%') 접수건수
-                                        th.font-12(width='10%') 해결건수
-                                        th.font-12(width='10%') 해결률(%)
-                                        th.font-12(width='10%') 평점
-                                tbody
-                                    tr
-                                        th.valign-middle.text-primary(scope='row', rowspan='9')
-                                            b 01
-                                        td.valign-middle(rowspan='2') 계정관리
-                                        td E-MAIL 계정관리
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr.bg-muted
-                                        td 소 계
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr
-                                        td.valign-middle(rowspan='6') 그룹웨어
-                                        td 전자결재
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr
-                                        td 공통기능
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr
-                                        td 이메일
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr
-                                        td 문서관리
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr
-                                        td 게시판
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr.bg-muted
-                                        td 소 계
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr.bg-primary10
-                                        td.text-center(colspan='2') 월 계
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    //
-                                        <tr class="bg-primary10 border-top">
-                                        <td colspan="2" class="text-center text-primary"><b>합 계</b></td>
-                                        <td class="text-primary"><b>6528</b></td>
-                                        <td class="text-primary"><b>133</b></td>
-                                        <td class="text-primary"><b>6121</b></td>
-                                        <td class="text-primary"><b>3</b></td>
-                                        <td class="text-primary"><b>97.8</b></td>
-                                        <td class="text-primary"><b>4.4</b></td>
-                                        </tr>
+                                        th.font-12(class='text-center' width='5%') 월
+                                        th.font-12(class='text-center' width='17%') 상위업무
+                                        th.font-12(class='text-center' width='10%') 하위업무
+                                        th.font-12(class='text-center' width='10%') 접수건수
+                                        th.font-12(class='text-center' width='10%') 해결건수
+                                        th.font-12(class='text-center' width='10%') 해결률(%)
+                                        th.font-12(class='text-center' width='10%' ) 평점
+                                tbody#more_list
+               
+               
 block footer
