--- a/app/views/statistic/mng_month.jade
+++ b/app/views/statistic/mng_month.jade
@@ -63,6 +63,21 @@ block content
                                             option(value='2019') 2019
                                             option(value='2020') 2020
                                             option(value='2021') 2021
+                                    .col-sm-2
+                                        select#mm.form-control
+                                            option(value='*') 전체
+                                            option(value='01') 1월
+                                            option(value='02') 2월
+                                            option(value='03') 3월
+                                            option(value='04') 4월
+                                            option(value='05') 5월
+                                            option(value='06') 6월
+                                            option(value='07') 7월
+                                            option(value='08') 8월
+                                            option(value='09') 9월
+                                            option(value='10') 10월
+                                            option(value='11') 11월
+                                            option(value='12') 12월
                                 .form-group
                                     label.col-sm-2.control-label 담당자
                                     .col-sm-2
