#PSW 전체내용검색 진행상태 추가

--- a/app/views/search/mng_list.jade
+++ b/app/views/search/mng_list.jade
@@ -81,6 +81,9 @@ block content
                                     label.col-sm-2.control-label 회사명
                                     .col-sm-4
                                         select#company_cd.form-control
+                                    label.col-sm-2.control-label 진행상태
+                                    .col-sm-2
+                                        select#status_cd.form-control
                                 .form-group
                                     label.col-sm-2.control-label 상위업무
                                     .col-sm-3
