#LHI company controller update수정(usermanager, incident company_nm 동시 수정)

--- a/app/views/http/500.jade
+++ b/app/views/http/500.jade
@@ -32,8 +32,8 @@ html
                                 pre #{err.stack}
                             .buttons-con
                                 .action-link-wrap
-                                    a.btn.btn-custom.btn-primary.waves-effect.waves-light.m-t-20(onclick='history.back(-1)', href='') Go Back
-                                    a.btn.btn-custom.btn-primary.waves-effect.waves-light.m-t-20(href='/') Go to Home Page
+                                    a.btn.btn-custom.btn-primary.waves-effect.waves-light.m-t-20(onclick='history.back(-1)', href='') Go Back 
+                                    //a.btn.btn-custom.btn-primary.waves-effect.waves-light.m-t-20(href='/') Go to Home Page
         script.
             var resizefunc = [];
         // Plugins
