--- a/app/views/manager/month_list.jade
+++ b/app/views/manager/month_list.jade
@@ -2,64 +2,34 @@ extends ../layouts/default
 block head
     title  2-4 월별 처리내역
     // Plugins css
-    link(href='../plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.css', rel='stylesheet')
-    link(href='../plugins/multiselect/css/multi-select.css', rel='stylesheet', type='text/css')
-    link(href='../plugins/select2/select2.css', rel='stylesheet', type='text/css')
-    link(href='../plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.css', rel='stylesheet')
-    link(href='../plugins/timepicker/bootstrap-timepicker.min.css', rel='stylesheet')
-    link(href='../plugins/mjolnic-bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css', rel='stylesheet')
-    link(href='../plugins/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css', rel='stylesheet')
-    link(href='../plugins/bootstrap-daterangepicker/daterangepicker.css', rel='stylesheet')
-    // summernot
-    link(href='../plugins/summernote/dist/summernote.css', rel='stylesheet')
-    link(href='../plugins/switchery/switchery.min.css', rel='stylesheet')
-    link(href='assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/core.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/icons.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/components.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/pages.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/menu_light.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/responsive.css', rel='stylesheet', type='text/css')
-    script(src='assets/js/modernizr.min.js')
+    link(href='/plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.css', rel='stylesheet')
+    link(href='/plugins/multiselect/css/multi-select.css', rel='stylesheet', type='text/css')
+    link(href='/plugins/select2/select2.css', rel='stylesheet', type='text/css')
+    link(href='/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.css', rel='stylesheet')
+    link(href='/plugins/timepicker/bootstrap-timepicker.min.css', rel='stylesheet')
+    link(href='/plugins/mjolnic-bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css', rel='stylesheet')
+    link(href='/plugins/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css', rel='stylesheet')
+    link(href='/plugins/bootstrap-daterangepicker/daterangepicker.css', rel='stylesheet')
+    link(href='/plugins/switchery/switchery.min.css', rel='stylesheet')
+    link(href='/assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/core.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/icons.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/components.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/pages.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/menu_light.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/responsive.css', rel='stylesheet', type='text/css')
+    script(src='/assets/js/modernizr.min.js')
     // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
     // WARNING: Respond.js doesn't work if you view the page via file://
     //if lt IE 9
     script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
     script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
+    script(src='/assets/js/jquery.core.js')
+    script(src='/assets/js/jquery.app.js')
 
-
-    script(src='/isu/js/incident/index.js', type='text/javascript')
-    script(src='/isu/js/search/datepicker.js' type='text/javascript')
-    script(src='https://code.jquery.com/ui/1.12.1/jquery-ui.js')
-    link(rel='stylesheet', href='//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css')
-
-    // jQuery
-    script(src='assets/js/jquery.min.js')
-    script(src='assets/js/bootstrap.min.js')
-    script(src='assets/js/detect.js')
-    script(src='assets/js/fastclick.js')
-    script(src='assets/js/jquery.slimscroll.js')
-    script(src='assets/js/jquery.blockUI.js')
-    script(src='assets/js/waves.js')
-    script(src='assets/js/wow.min.js')
-    script(src='assets/js/jquery.nicescroll.js')
-    script(src='assets/js/jquery.scrollTo.min.js')
-    script(src='../plugins/switchery/switchery.min.js')
-    script(src='../plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js')
-    script(type='text/javascript', src='../plugins/multiselect/js/jquery.multi-select.js')
-    script(type='text/javascript', src='../plugins/jquery-quicksearch/jquery.quicksearch.js')
-    script(src='../plugins/select2/select2.min.js', type='text/javascript')
-    script(src='../plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js', type='text/javascript')
-    script(src='../plugins/bootstrap-inputmask/bootstrap-inputmask.min.js', type='text/javascript')
-    script(src='../plugins/moment/moment.js')
-    script(src='../plugins/timepicker/bootstrap-timepicker.min.js')
-    script(src='../plugins/mjolnic-bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js')
-    script(src='../plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
-    script(src='../plugins/bootstrap-daterangepicker/daterangepicker.js')
-    // form summernote
-    script(src='../plugins/summernote/dist/summernote.min.js')
-    script(src='assets/js/jquery.core.js')
-    script(src='assets/js/jquery.app.js')
+    script(src='/vendor/jquery/jquery.min.js')
+    script(src='/plugins/rowspan/jquery.rowspanizer.js', type='text/javascript')
+    script(src='/isu/js/manager/month_list.js', type='text/javascript')
 
 
 block content
@@ -83,26 +53,39 @@ block content
                                 .form-group
                                     label.col-sm-2.control-label 검색년도
                                     .col-sm-2
-                                        select.form-control
-                                            option 2012
-                                            option 2013
-                                            option 2014
-                                            option 2015
-                                            option 2016
-                                            option(selected='') 2017
-                                            option 2018
-                                            option 2019
-                                            option 2020
-                                            option 2021
+                                        select#yyyy.form-control
+                                            option(value='2012') 2012
+                                            option(value='2013') 2013
+                                            option(value='2014') 2014
+                                            option(value='2015') 2015
+                                            option(value='2016') 2016
+                                            option(value='2017') 2017
+                                            option(selected='2018') 2018
+                                            option(value='2019') 2019
+                                            option(value='2020') 2020
+                                            option(value='2021') 2021
+                                    .col-sm-2
+                                        select#mm.form-control
+                                            option(value='*') 전체
+                                            option(value='01') 1월
+                                            option(value='02') 2월
+                                            option(value='03') 3월
+                                            option(value='04') 4월
+                                            option(value='05') 5월
+                                            option(value='06') 6월
+                                            option(value='07') 7월
+                                            option(value='08') 8월
+                                            option(value='09') 9월
+                                            option(value='10') 10월
+                                            option(value='11') 11월
+                                            option(value='12') 12월
+                                .form-group
+                                    label.col-sm-2.control-label 담당자
+                                    .col-sm-2
+                                        select#manager.form-control
                                     label.col-sm-2.control-label 상위업무
                                     .col-sm-2
-                                        select.form-control
-                                            option 전체
-                                            option 항목1
-                                            option 항목2
-                                            option 항목3
-                                            option 항목4
-                                            option 항목5
+                                        select#higher_cd.form-control
                                     .col-sm-2
                                         button.btn.btn-primary(type='button')
                                             i.fa.fa-search.m-r-5
@@ -110,83 +93,18 @@ block content
                 .row
                     .col-lg-12
                         .card-box
-                            table.table.table-bordered
+                            table#target-table.table.table-bordered
                                 thead
                                     tr
-                                        th.font-12(width='5%') 월
-                                        th.font-12(width='20%') 상위업무
-                                        th.font-12(width='') 하위업무
-                                        th.font-12(width='10%') 접수건수
-                                        th.font-12(width='10%') 해결건수
-                                        th.font-12(width='10%') 해결률(%)
-                                        th.font-12(width='10%') 평점
-                                tbody
-                                    tr
-                                        th.valign-middle.text-primary(scope='row', rowspan='9')
-                                            b 01
-                                        td.valign-middle(rowspan='2') 계정관리
-                                        td E-MAIL 계정관리
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr.bg-muted
-                                        td 소 계
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr
-                                        td.valign-middle(rowspan='6') 그룹웨어
-                                        td 전자결재
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr
-                                        td 공통기능
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr
-                                        td 이메일
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr
-                                        td 문서관리
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr
-                                        td 게시판
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr.bg-muted
-                                        td 소 계
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    tr.bg-primary10
-                                        td.text-center(colspan='2') 월 계
-                                        td 8
-                                        td 8
-                                        td 100.0
-                                        td 5.0
-                                    //
-                                        <tr class="bg-primary10 border-top">
-                                        <td colspan="2" class="text-center text-primary"><b>합 계</b></td>
-                                        <td class="text-primary"><b>6528</b></td>
-                                        <td class="text-primary"><b>133</b></td>
-                                        <td class="text-primary"><b>6121</b></td>
-                                        <td class="text-primary"><b>3</b></td>
-                                        <td class="text-primary"><b>97.8</b></td>
-                                        <td class="text-primary"><b>4.4</b></td>
-                                        </tr>
+                                        th.font-12(class='text-center' width='10%') 월
+                                        th.font-12(class='text-center' width='15%') 상위업무
+                                        th.font-12(class='text-center' width='20%') 하위업무
+                                        th.font-12(class='text-center' width='10%') 접수건수
+                                        th.font-12(class='text-center' width='10%') 해결건수
+                                        th.font-12(class='text-center' width='10%') 해결률(%)
+                                        th.font-12(class='text-center' width='10%' ) 평점
+                                tbody#more_list
+
+
+
 block footer
