--- a/app/views/company/index.jade
+++ b/app/views/company/index.jade
@@ -49,6 +49,10 @@ block content
                                 .dataTables_info Showing 1 to 15 of 
                                     span(id='totalPage')
                                     |  pages
+                                    |  /
+                                    |  총 
+                                    span(id='totalCnt')
+                                    |개
                             .col-sm-8
                                 .dataTables_paginate.paging_simple_numbers.pull-right
                                     ul#paging.pagination
