--- a/app/views/search/remain_list.jade
+++ b/app/views/search/remain_list.jade
@@ -109,7 +109,7 @@ block content
                 .row
                     .col-lg-12
                         .card-box
-                            table.table.table-bordered(id='lists')
+                            table.table.table-hover(id='lists')
                                 thead
                                     tr
                                         th(class='text-center' width='14%') 상위업무명
