#PSW 보류 MODAL명 수정

--- a/app/views/manager/work_list.jade
+++ b/app/views/manager/work_list.jade
@@ -194,8 +194,8 @@ block content
                                             | 완료
                                         button#holdBtn.btn.btn.btn-pink.waves-effect.waves-light.m-l-5(type='button', data-toggle='modal', data-target='#hold_modal', style='display: none;')
                                             i.fa.fa-thumb-tack
-                                            
                                             | 보류  
+
                                         //button.btn.btn-primary.waves-effect.waves-light.m-l-5(type='button', onclick='window.print()')
                                         //    i.fa.fa-print
                                         //    | 인쇄
@@ -537,7 +537,7 @@ block content
                                         label.col-sm-2.control-label 공개여부
                                         .col-sm-2
                                             .checkbox.checkbox-primary.checkbox-single.p-t-10
-                                                input(name='incident[hold_open_flag]', type='checkbox', value='Y', aria-label='Single checkbox One')
+                                                input(name='incident[complete_open_flag]', type='checkbox', value='Y', aria-label='Single checkbox One')
                                                 label
                                         label.col-sm-2.control-label 처리시간
                                         .col-sm-3
