#PSW 해결여부/공개여부 오류 수정

--- a/app/views/manager/work_list.jade
+++ b/app/views/manager/work_list.jade
@@ -465,7 +465,7 @@ block content
                                         label.col-sm-2.control-label 해결여부
                                         .col-sm-2
                                             .checkbox.checkbox-primary.checkbox-single.p-t-10
-                                                input(type='checkbox', value='Y', aria-label='Single checkbox One', checked)
+                                                input.form-control(name='incident[solution_flag]', type='checkbox', aria-label='Single checkbox One',checked)
                                                 label
                                         label.col-sm-2.control-label 처리구분
                                         .col-sm-6
@@ -480,7 +480,7 @@ block content
                                         label.col-sm-2.control-label 공개여부
                                         .col-sm-2
                                             .checkbox.checkbox-primary.checkbox-single.p-t-10
-                                                input(name='incident[complete_open_flag]', type='checkbox', value='Y', aria-label='Single checkbox One')
+                                                input.form-control(name='incident[complete_open_flag]', type='checkbox', aria-label='Single checkbox One')
                                                 label
                                         label.col-sm-2.control-label 처리시간
                                         .col-sm-3
@@ -522,7 +522,7 @@ block content
                                         label.col-sm-2.control-label 해결여부
                                         .col-sm-2
                                             .checkbox.checkbox-primary.checkbox-single.p-t-10
-                                                input(type='checkbox', value='Y', aria-label='Single checkbox One', checked)
+                                                input(name='incident[solution_flag2]', type='checkbox', aria-label='Single checkbox One',checked)
                                                 label
                                         //label.col-sm-2.control-label 처리구분
                                         //.col-sm-6
@@ -537,7 +537,7 @@ block content
                                         label.col-sm-2.control-label 공개여부
                                         .col-sm-2
                                             .checkbox.checkbox-primary.checkbox-single.p-t-10
-                                                input(name='incident[complete_open_flag]', type='checkbox', value='Y', aria-label='Single checkbox One')
+                                                input(name='incident[complete_open_flag2]', type='checkbox', aria-label='Single checkbox One')
                                                 label
                                         label.col-sm-2.control-label 처리시간
                                         .col-sm-3
