#PSW 처리구분별 처리내역 진행중

--- a/app/views/layouts/admin.jade
+++ b/app/views/layouts/admin.jade
@@ -127,7 +127,7 @@ html
                                     li
                                         a(href='/statistic/mng_month') 담당자별 월별 처리내역
                                     li
-                                        a(href='/statistic/status_list') 처리구분별 처리내역
+                                        a(href='/statistic/process_gubun') 처리구분별 처리내역
                             - }
                             - if(session.user_flag ==1 || session.user_flag ==4){
                             li.has_sub
