--- a/app/views/layouts/admin1.jade
+++ b/app/views/layouts/admin1.jade
@@ -122,7 +122,7 @@ html
                                     li
                                         a(href='/statistic/mng_month') 담당자별 월별 처리내역
                                     li
-                                        a(href='/statistic/status_list') 처리구분별 처리내역
+                                        a(href='/statistic/process_gubun') 처리구분별 처리내역
                             li.has_sub
                                 a.waves-effect.waves-primary(href='javascript:void(0);')
                                     i.md.md-view-list
