#PSW - Program_ID 추가요청

--- a/app/views/search/mng_list.jade
+++ b/app/views/search/mng_list.jade
@@ -292,6 +292,9 @@ block content
                                             th.bg-muted 공개여부
                                             td#_complete_open_flag-reading_cnt
                                         tr
+                                            th.bg-muted.text-danger Program ID
+                                            td#_program_id(colspan='3')
+                                        tr
                                             th.bg-muted.text-danger 내부공유사항
                                             td#_sharing_content(colspan='3')
 
