--- a/app/views/manager/work_list.jade
+++ b/app/views/manager/work_list.jade
@@ -78,7 +78,7 @@ block content
                                     label.col-sm-2.control-label 진행상태
                                     .col-sm-2
                                         select.form-control(id='status_cd' name='status_cd')
-                                            option(value ='*') 전체
+                                            //option(value ='*') 전체
                                             - if (status.length > 0) {
                                                 - for( var i = 0 ; length = status.length > i ; i++ ){ 
                                                     option(value ='#{status[i].status_cd}') #{status[i].status_nm}
@@ -314,6 +314,9 @@ block content
                                             th.bg-muted 공개여부
                                             td#_complete_open_flag
                                         tr
+                                            th.bg-muted.text-danger Program ID
+                                            td#_program_id(colspan='3')
+                                        tr
                                             th.bg-muted.text-danger 내부공유사항
                                             td#_sharing_content(colspan='3')
 
@@ -490,6 +493,10 @@ block content
                                         label.col-sm-2.control-label 지연사유
                                         .col-sm-10
                                             textarea.form-control(name='incident[delay_reason]', rows='2')
+                                    .form-group
+                                        label.col-sm-2.control-label Program ID
+                                        .col-sm-10
+                                            textarea.form-control(name='incident[program_id]', rows='4')
                                     .form-group
                                         label.col-sm-2.control-label 처리공유
                                         .col-sm-10
