#PSW 처리구분 데이터 추가

--- a/app/views/manager/work_list.jade
+++ b/app/views/manager/work_list.jade
@@ -292,6 +292,7 @@ block content
                                         tr
                                             th.bg-muted 처리구분
                                             td(colspan='3') 
+                                                span#_process_nm 
                                         tr
                                             th.bg-muted 처리내용
                                             td#_complete_content(colspan='3')
