--- a/app/views/search/mng_list.jade
+++ b/app/views/search/mng_list.jade
@@ -269,7 +269,7 @@ block content
                                         tr
                                             th.bg-muted 처리구분
                                             td(colspan='3') 
-                                                span#_status_nm
+                                                span#_process_nm
                                         tr
                                             th.bg-muted 처리내용
                                             td#_complete_content(colspan='3')
