#LHI 진행상태 변경 변경 전 : 접수중/처리중/미평가/처리완료/보류/미처리 변경 후 : 접수대기/처리중/미평가/처리완료/협의필요/미처리

--- a/app/views/main/main.jade
+++ b/app/views/main/main.jade
@@ -63,7 +63,7 @@ block content
                 .widget-simple-chart.text-right.card-box
                   .circliful-chart(data-dimension='90', data-text='49%', data-width='5', data-fontsize='14', data-percent='49', data-fgcolor='#98a6ad', data-bgcolor='#ebeff2')
                   h3.text-inverse.counter 62
-                  p.text-muted.text-nowrap 보류
+                  p.text-muted.text-nowrap 협의필요 
             // end row
             .row
               .col-lg-12
