#LHI 엑셀다운로드 조회조건 수정

--- a/app/views/search/mng_list.jade
+++ b/app/views/search/mng_list.jade
@@ -80,10 +80,10 @@ block content
                                 .form-group
                                     label.col-sm-2.control-label 회사명
                                     .col-sm-4
-                                        select#company_cd.form-control
+                                        select#company_cd.form-control(name='company_cd')
                                     label.col-sm-2.control-label 진행상태
                                     .col-sm-2
-                                        select#status_cd.form-control
+                                        select#status_cd.form-control(name='status_cd')
                                 .form-group
                                     label.col-sm-2.control-label 상위업무
                                     .col-sm-3
