#psw 처리진행현황 데이터 안보이는 오류

--- a/app/views/incident/index.jade
+++ b/app/views/incident/index.jade
@@ -146,6 +146,7 @@ block content
                                         b#_status_nm
                                     h4.m-t-0
                                         b#_title
+                                        //(style='display: none;')
                                     .media
                                         span.pull-right
                                             h4#_request_company_nm-request_nm
@@ -174,6 +175,8 @@ block content
                                 #_complete_box
                                 // 서비스 평가 조치 내용
                                 #_after_valuation_box
+
+
     
     //서비스 평가 모달
     #valuation_modal.modal.fade(role='dialog', aria-hidden='true', aria-labelledby='custom-width-modalLabel', tabindex='-1', style='display: none;')
