--- a/app/views/search/remain_list.jade
+++ b/app/views/search/remain_list.jade
@@ -271,6 +271,10 @@ block content
                                         tr
                                             th.bg-muted.text-danger 내부공유사항
                                             td#_sharing_content(colspan='3')
+                                        tr
+                                            th.bg-muted.text-danger 미처리/협의필요 사유
+                                            td#_hold_content_nc_content(colspan='3')
+
 
 
 
