#PSW 미처리/협의필요 내용 표기 추가

--- a/app/views/manager/work_list.jade
+++ b/app/views/manager/work_list.jade
@@ -323,6 +323,10 @@ block content
                                         tr
                                             th.bg-muted.text-danger 내부공유사항
                                             td#_sharing_content(colspan='3')
+                                        tr
+                                            th.bg-muted.text-danger 미처리/협의필요 사유
+                                            td#_hold_content_nc_content(colspan='3')
+
 
     //접수모달
     #receipt_modal.modal.fade(tabindex='-1', role='dialog', aria-labelledby='custom-width-modalLabel', aria-hidden='true', style='display: none;')
